--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Игра на двоих</title>
+    <style>
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+        body { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background: #f4f4f4; }
+        .grid { display: grid; grid-template-columns: repeat(5, 80px); grid-template-rows: repeat(4, 80px); gap: 10px; margin-bottom: 20px; }
+        .cell { width: 80px; height: 80px; background: #3498db; color: white; display: flex; align-items: center; justify-content: center; font-size: 20px; font-weight: bold; cursor: pointer; border-radius: 5px; transition: 0.3s; }
+        .cell:hover { background: #2980b9; }
+        .correct { background: #2ecc71 !important; }
+        .wrong { background: #e74c3c !important; }
+        .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); justify-content: center; align-items: center; }
+        .modal-content { background: white; padding: 20px; border-radius: 10px; text-align: center; width: 300px; }
+        .answers button { width: 100%; margin: 5px 0; padding: 10px; border: none; cursor: pointer; background: #3498db; color: white; border-radius: 5px; transition: 0.3s; }
+        .answers button:hover { background: #2980b9; }
+        table { width: 300px; margin-top: 20px; border-collapse: collapse; text-align: center; background: white; }
+        th, td { padding: 10px; border: 1px solid #ddd; }
+        th { background: #2c3e50; color: white; }
+    </style>
+</head>
+<body>
 
+    <div class="grid"></div>
+
+    <table>
+        <tr>
+            <th>Игрок</th>
+            <th>Очки</th>
+        </tr>
+        <tr>
+            <td>Игрок 1</td>
+            <td id="score1">0</td>
+        </tr>
+        <tr>
+            <td>Игрок 2</td>
+            <td id="score2">0</td>
+        </tr>
+        <tr>
+            <td colspan="2">Ходит: <span id="currentPlayer">Игрок 1</span></td>
+        </tr>
+    </table>
+
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <h2 id="question">Вопрос?</h2>
+            <div class="answers">
+                <button onclick="checkAnswer(0)">Ответ 1</button>
+                <button onclick="checkAnswer(1)">Ответ 2</button>
+                <button onclick="checkAnswer(2)">Ответ 3</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const grid = document.querySelector(".grid");
+        const modal = document.getElementById("modal");
+        const questionText = document.getElementById("question");
+        const score1Display = document.getElementById("score1");
+        const score2Display = document.getElementById("score2");
+        const currentPlayerDisplay = document.getElementById("currentPlayer");
+
+        let currentPlayer = 1;
+        let score1 = 0;
+        let score2 = 0;
+        let totalCells = 20;
+        let answeredCells = 0;
+        let currentCell = null;
+        let currentQuestion = null;
+
+        const questions = [
+            { q: "Какой цвет не является основным?", a: ["Красный", "Зелёный", "Синий"], correct: 1 },
+            { q: "Сколько планет в Солнечной системе?", a: ["7", "8", "9"], correct: 1 },
+            { q: "Столица Японии?", a: ["Токио", "Сеул", "Пекин"], correct: 0 },
+            { q: "Кто написал 'Евгений Онегин'?", a: ["Лермонтов", "Пушкин", "Достоевский"], correct: 1 },
+            { q: "Как называется самый длинный день в году?", a: ["Равноденствие", "Солнцестояние", "Закат"], correct: 1 },
+            { q: "Какое море самое большое?", a: ["Чёрное", "Средиземное", "Каспийское"], correct: 2 },
+            { q: "2^3 = ?", a: ["4", "6", "8"], correct: 2 },
+            { q: "Что тяжелее: 1 кг железа или 1 кг пуха?", a: ["Железо", "Одинаково", "Пух"], correct: 1 },
+            { q: "Какое число идёт после 99?", a: ["100", "101", "98"], correct: 0 },
+            { q: "Что такое HTML?", a: ["Язык программирования", "Язык разметки", "База данных"], correct: 1 },
+            { q: "Как зовут создателя Tesla?", a: ["Билл Гейтс", "Илон Маск", "Джефф Безос"], correct: 1 },
+            { q: "Сколько континентов на Земле?", a: ["5", "6", "7"], correct: 2 },
+            { q: "Сколько дней в году?", a: ["364", "365", "366"], correct: 1 },
+            { q: "Как называется столица США?", a: ["Вашингтон", "Нью-Йорк", "Лос-Анджелес"], correct: 0 },
+            { q: "Сколько градусов в прямом угле?", a: ["90", "180", "60"], correct: 0 },
+            { q: "Какое животное символизирует Россию?", a: ["Медведь", "Орёл", "Волк"], correct: 0 },
+            { q: "Какая планета ближе всего к Солнцу?", a: ["Земля", "Марс", "Меркурий"], correct: 2 },
+            { q: "Какой океан самый большой?", a: ["Атлантический", "Индийский", "Тихий"], correct: 2 },
+            { q: "Сколько пальцев у человека на руках?", a: ["5", "10", "8"], correct: 1 }
+        ];
+
+        questions.sort(() => Math.random() - 0.5);
+
+        for (let i = 0; i < totalCells; i++) {
+            let level = Math.floor(Math.random() * (100 - 10 + 1)) + 10;
+            let cell = document.createElement("div");
+            cell.classList.add("cell");
+            cell.textContent = level;
+            cell.addEventListener("click", () => openModal(cell, questions[i]));
+            grid.appendChild(cell);
+        }
+
+        function openModal(cell, question) {
+            if (cell.classList.contains("correct") || cell.classList.contains("wrong")) return;
+
+            currentCell = cell;
+            currentQuestion = question;
+            questionText.textContent = question.q;
+
+            let buttons = document.querySelectorAll(".answers button");
+            buttons.forEach((btn, index) => {
+                btn.textContent = question.a[index];
+                btn.onclick = () => checkAnswer(index === question.correct);
+            });
+
+            modal.style.display = "flex";
+        }
+
+        function checkAnswer(isCorrect) {
+            modal.style.display = "none";
+            if (isCorrect) currentCell.classList.add("correct"), currentPlayer === 1 ? score1++ : score2++;
+            else currentCell.classList.add("wrong");
+
+            score1Display.textContent = score1;
+            score2Display.textContent = score2;
+            answeredCells++;
+            if (answeredCells === totalCells) alert(`Победил: ${score1 > score2 ? "Игрок 1" : score2 > score1 ? "Игрок 2" : "Ничья"}!`);
+            else currentPlayer = currentPlayer === 1 ? 2 : 1, currentPlayerDisplay.textContent = `Игрок ${currentPlayer}`;
+        }
+    </script>
+
+</body>
+</html>
