--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="container">
     <!-- Ввод имен игроков -->
     <div class="player-input">
-        <input type="text" id="name1" placeholder="Имя игрока 1">
-        <input type="text" id="name2" placeholder="Имя игрока 2">
+        <input type="text" id="name1" placeholder="Ойыншының аты 1">
+        <input type="text" id="name2" placeholder="Ойыншының аты 2">
         <button onclick="startGame()">Ойынды бастаңыз</button>
     </div>
 
